# bias_check

./: README.md  pyproject.toml
.github/workflows/: publish_pypi.yml
tests/: test_validator.py
validator/: main.py  post-install.py
