[project]
name = "bias_check"
version = "0.2.0"
description = "Wrapping a bias check model into a validator."
authors = [
    {name = "Guardrails AI", email = "contact@guardrailsai.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.9"
dependencies = [
    "guardrails-ai>=0.5.15",
    "transformers>=4.37.0",
    "tf-keras",
    "spacy[transformers]>=3.6.0",
    "cached_path>=1.6.0",
    "sentencepiece",
    "tensorflow>=2.16.0",
    #"tensorflow-macos>=2.16.0 ;  platform_system == 'Darwin'",
    #"tensorflow-metal>=1.0.0 ; platform_system == 'Darwin'"
]

[project.optional-dependencies]
dev = [
    "pyright",
    "pytest",
    "ruff"
] 

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rP"
testpaths = [
    "tests"
]

[tool.pyright]
include = ["validator"]
