[project]
name = "bias_check"
version = "0.3.0"
description = "Wrapping a bias check model into a validator."
authors = [
    {name = "Guardrails AI", email = "contact@guardrailsai.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.9"
dependencies = [
    "guardrails-ai>=0.5.15",
    "transformers>=4.37.0",
    "tf-keras",
    "sentencepiece",
    "tensorflow>=2.16.0",  # Required for the dbias model, but not as a direct dependency.
    "sentence-splitter>=1.4"
]

[project.optional-dependencies]
dev = [
    "pyright",
    "pytest",
    "ruff"
] 

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rP"
testpaths = [
    "tests"
]

[tool.pyright]
include = ["validator"]
